# Ask-My-DB

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py  test.db
.github/workflows/: pypi-publish.yaml
askdb/: __init__.py  askdb.py
askdb/llm/: ollama_provider.py  openai_provider.py
askmydb/: __init__.py
askmydb/llm/: __init__.py
examples/: run_dummy.py  run_ollama_llm.py  run_openrouter_llm.py
tests/: test_ollama_provider.py
