[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="ask-mydb"
version="0.1.0"
description="A Python package for querying databases using natural language."
readme="README.md"
license="MIT"
dependencies = [
    "sqlalchemy"
]

[tool.bump2version]
current_version = "0.1.1"
commit = true
tag = true

[tool.bump2version.file."pyproject.toml"]

[tool.bump2version.file."src/ask_mydb/__init__.py"]

[project.optional-dependencies]
dev = ["black", "pytest"]
openai = ["openai"]
ollama = ["ollama"]

all = [
    "sqlalchemy",
    "black",
    "pytest",
    "openai",
    "ollama"
]


[tool.setuptools]
packages = ["askmydb"]